--- a/src/content/2022-06-02-downtime.md
+++ b/src/content/2022-06-02-downtime.md
@@ -2,6 +2,7 @@
 title: Hetzner outage
 date: 2022-06-02 22:39:00 +0200
 resolved: true
+severity: down
 resolvedWhen: 2022-06-02 22:44:00 +0200
 affected:
  - f.bain.cz
